removed trialing comma

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,6 @@
 
 	"rules": {
 		"font-family-no-missing-generic-family-keyword": null,
-		"no-descending-specificity": null,
+		"no-descending-specificity": null
 	}
 }
